--- a/attractions.html
+++ b/attractions.html
@@ -105,7 +105,7 @@
             <!--Hiking-->
             <div class="attractions-overview-container">
                 <div class="attractions-overview-image">
-                        <a href="hiking.html"><img src="images/070.jpg" alt="Hiking Maple Canyon loop trail""></a>
+                        <a href="hiking.html"><img src="images/070.jpg" alt="Hiking Maple Canyon loop trail"></a>
                 </div>
                 <div class="attractions-overview-text">
                     <a href="hiking.html"><h3>Hiking</h3></a>
