--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <!--Calendar Date Selection-->
             <div class="input-grp">
-                <input id="date-selector" class="form-control select-date" type="text" name="daterange" placeholder="Select Dates on Book Now Form" readonly="true"/>
+                <input id="date-selector" class="form-control select-date" type="text" name="daterange" placeholder="Select Dates on Book Now Form" readonly="readonly"/>
             </div>
             <!--Submit/Book Now Button-->
             <div class="input-grp">
