--- a/otherAttractions.html
+++ b/otherAttractions.html
@@ -179,7 +179,7 @@
                 <li><a href="https://www.go-utah.com/Sanpete-County/" target="_blank">Go-Utah</a></li>
                 <li><a href="https://www.heraldextra.com/sanpete-county/special-section/recreation-activities-galore-in-sanpete-valley/article_bb1c576d-95c1-522b-a55f-6d58fc32b9d0.html" target="_blank">Herald Extra</a></li>
                 <li><a href="https://www.google.com/destination/map/topsights?q=sanpete+county+sightseeing&rlz=1C1CHBF_enUS860US860&oq=sanpete+county&aqs=chrome.0.69i59j69i60l3j69i65l2.1565j0j7&sourceid=chrome&ie=UTF-8&tcfs=&dest_src=ts&dest_mid=/m/0jchy&sa=X&ved=2ahUKEwj5ttmUsKjkAhWQqp4KHWm5BK4Q6tEBKAQwAHoECAoQBw#dest_mid=/m/0jchy&dest_src=ts&tcfs=EhoKCC9tLzBqY2h5Eg5TYW5wZXRlIENvdW50eQ" target="_blank">Google Recommendations</a></li>
-                <li><a href="https://www.fs.usda.gov/recmain/mantilasal/recreation" target="_blank">Forest Service</li>
+                <li><a href="https://www.fs.usda.gov/recmain/mantilasal/recreation" target="_blank">Forest Service</a></li>
                 <li><a href="tel:435-340-0075" target="_blank">Ask Us!</a></li>
             </ul>
             
