--- a/rockClimbing.html
+++ b/rockClimbing.html
@@ -167,7 +167,7 @@
             <ul>
                 <li><a href="https://www.mountainproject.com/area/105739298/maple-canyon" target="_blank">Mountain Project</a></li>
                 <li><a href="https://www.thecrag.com/climbing/united-states/maple-canyon" target="_blank">The Crag</a></li>
-                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/climbing/?recid=72816&actid=37" target="_blank">Forest Service</li>
+                <li><a href="https://www.fs.usda.gov/activity/mantilasal/recreation/climbing/?recid=72816&actid=37" target="_blank">Forest Service</a></li>
                 <li><a href="http://www.rockclimbing.com/routes/North_America/United_States/Utah/Central_Utah/Maple_Canyon/" target="_blank">Rock Climbing</a></li>
                 <li><a href="http://sanpete.com/pages/climb" target="_blank">Sanpete.com</a></li>
                 <li><a href="https://www.climbsmith.com/blog/maple-canyon-climbing-trip/" target="_blank">Climb Smith</a></li>
