--- a/gallery.html
+++ b/gallery.html
@@ -48,6 +48,7 @@
                 <li><a href="map.html">Map</a></li>
                 <li id="menu-icon" class="menu-trigger"><a><i class="fas fa-bars menu-icon"></i></a></li>
                 <li id="menu-close-icon" class="menu-close"><a><i class="fas fa-times close-icon"></i></a></li>
+                <li><a href="index.html"><i class="fas fa-home hiking-icon"></i></a></li>
             </ul>
         </nav>
 
