style.css update
Fixes to help with snowombiling video for mobile screens

--- a/snowmobiling.html
+++ b/snowmobiling.html
@@ -170,7 +170,7 @@
                 <li>Additional route maps available at our cabins!</li>
             </ul>
 
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/uvMh7LPxjkQ?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" style="margin: 0 32px;" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/uvMh7LPxjkQ?start=1" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
             <p>"It's the Best Snowmobiling in the U.S. That's why you come here!" –Glen Zumwalt</p>
         </div>
