--- a/history.html
+++ b/history.html
@@ -155,6 +155,8 @@
                 <li><a href="http://sanpete.com/downloads/Manti%20Walking%20Tour.pdf" target="_blank">Manti Walking Tour</a></li>
             </ul>
 
+            <iframe src="https://www.youtube.com/embed/KVcjfEGQtng" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         </div>
 
 
