--- a/otherAttractions.html
+++ b/otherAttractions.html
@@ -184,6 +184,8 @@
                 <li><a href="tel:435-340-0075" target="_blank">Ask Us!</a></li>
             </ul>
             
+            <iframe src="https://www.youtube.com/embed/hy7s7UrAhlI" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
         </div>
 
 
